--- CHANGELOG ---
--- PyFMI-NEXT_VERSION ---
    * Removed utilities related to the obsolete FMUX model interface.
    * Removed no longer required dependency on lxml.
    * Unified result handling and allowed the master algorithm to use all available result handlers

--- PyFMI-2.11.0 ---
    * Refactored result handling for dynamic_diagnostics. It is now possible use dynamic_diagnostics with a custom result handler.
    * Migrated some diagnostics functionality into a new file: src/common/diagnostics.py. This should be seamless.
    * pyfmi.common.diagnostics_prefix has been moved to pyfmi.common.diagnostics as DIAGNOSTICS_PREFIX. 

--- PyFMI-2.10.4 ---
    * Added 'result_handling' = None as option, deprecated 'none'.
    * Fixed so that 'hasattr' works on log nodes.
    * Calls to get continuous states derivatives when there are no such states will no longer result in FMU calls.

--- PyFMI-2.10.3 ---
    * Added method to retrieve the unbounded attribute for real variables in FMI2: get_variable_unbounded.
    * Note: With Assimulo >= 3.4.1 CVode adds supports relative tolerance vectors, see Assimulo README for details.
    * Added partial support for rtol vectors in simulate(): Values need to be equal except for zeros & requires support from used solver.
    * For unbounded states, the simulate method attempts to create a vector of relative tolerances and entries that correspond to unbounded states are set to zero. (FMI2 ME only)

--- PyFMI-2.10.2 ---
    * Corrected version number.

--- PyFMI-2.10.1 ---
    * Changed such that absolute tolerances calculated with state nominals retrieved before initialization will be recalculated with state nominals from after initialization when possible.
    * Added auto correction of retrieved state nominals with illegal values.

--- PyFMI-2.10.0 ---
    * Added shortcut such that get_(real|integer|boolean|string)([]) calls no longer trigger a call to the FMU.
    * Removed the following deprecated functions: