@@ -3,6 +3,8 @@
     * Removed utilities related to the obsolete FMUX model interface.
     * Removed no longer required dependency on lxml.
     * Unified result handling and allowed the master algorithm to use all available result handlers
+    * Added new option "result_downsampling_factor" for simulation of CS-FMUs. 
+      Solution will only be stored every "result_downsampling_factor"-nth communication point.
 
 --- PyFMI-2.11.0 ---
     * Refactored result handling for dynamic_diagnostics. It is now possible use dynamic_diagnostics with a custom result handler.
